# backend-service/doc/swagger.yaml
@@ -174,6 +174,8 @@ paths:
             schema:
               $ref: "#/components/schemas/Admin"
         required: true
+      security:
+        - admin_auth_token: []
       responses:
         "200":
           description: successful operation
@@ -186,8 +188,38 @@ paths:
                 $ref: "#/components/schemas/Admin"
         "400":
           description: Invalid input
+        "401":
+          description: No authorization token provided
         "422":
           description: Validation exception
+  /admin/delete/{adminId}:
+    delete:
+      tags:
+        - admin
+      summary: Delete an admin by ID
+      description: Delete an admin by ID
+      operationId: deleteAdmin
+      parameters:
+        - name: adminId
+          in: path
+          description: ID of Admin to delete
+          required: true
+          schema:
+            type: string
+            description: MongoDB ObjectID as a hexadecimal string.
+      security:
+        - admin_auth_token: []
+      responses:
+        "200":
+          description: successful operation
+        "400":
+          description: Invalid input
+        "401":
+          description: No authorization token provided
+        "404":
+          description: Admin not found
+        "500":
+          description: "Error Deleting Admin: Internal Server Error"
   /client/login:
     get:
       tags:
@@ -1055,6 +1087,18 @@ components:
           scopes:
             write:pets: modify pets in your account
             read:pets: read your pets
+    admin_auth_token:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+    trainer_auth_token:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+    client_auth_token:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
     api_key:
       type: apiKey
       name: api_key
